deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
spec:
  selector:
    app: spring-boot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 32000 # Ensure this is within the NodePort range (30000-32767)
  type: LoadBalancer
